Actions
Bug #9900
closedfcip: debug statement is mixed up
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
I did notice the cstyle error:
common/io/fibre-channel/ulp/fcip.c: 5251: unexpected ; common/io/fibre-channel/ulp/fcip.c: 5252: unexpected ')'
Since such errors are rather unusual, I did check... Apparently the debug macro usage is gone a bit wrong.
Related issues
Updated by Toomas Soome over 3 years ago
- Related to Bug #9903: qinfo: add typed members added
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit b664061f7bf47f885e4f325a1f1ea21e8e09ea4b
commit b664061f7bf47f885e4f325a1f1ea21e8e09ea4b Author: Toomas Soome <tsoome@me.com> Date: 2018-10-17T00:53:42.000Z 9900 fcip: debug statement is mixed up Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions