9900 fcip: debug statement is mixed up Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Dan McDonald <danmcd@joyent.com>